--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
+    "build": "npm run tailwind && craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "tailwind": "npx tailwindcss -i src/index.css -o src/App.css",
+    "deploy": "npm run build && serve -s build -p 34175",
+    "dev": "concurrently \"cross-env PORT=3001 npm start\"  \"npm run tailwind -- --watch\" "
   },
   "eslintConfig": {
     "extends": [
@@ -41,7 +44,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.8",
-    "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.3"
   }
 }
